Fix accepting when already logged in + add lunch + add scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import './variables';
 
+body {
+  overflow-y: scroll;
+}
+
 .orange-yellow {
   color: $orange;
   background: $yellow;
